--- a/resources/amec.html
+++ b/resources/amec.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="maintainence.js"></script>-->
 	<title>AMEC</title>
-	<link href="/styles/_main.css" rel="stylesheet" type="text/css" />
+	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/5-X 2023.png">
 	<!--<script src="iframed.js"></script>-->
 </head>
