change poly rev style link

--- a/resources/revision/math/polygon.html
+++ b/resources/revision/math/polygon.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="maintainence.js"></script>-->
 	<title>MATH REVISION POLYGONS</title>
-	<link href="/styles/_main.css" rel="stylesheet" type="text/css" />
+	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="/logos/5-X%202023.png">
 	<!--<script src="iframed.js"></script>-->
 </head>
