--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>5-X 2023</title>
 	<link href="styles/home.css" rel="stylesheet" type="text/css" />
-	<link id="iconlink" rel="icon" type="image/png" href="/logos/5-X%202023.png">
+	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
 	<style>:is(th,td):not([colspan]){width:calc(100 / 7 * 1%);}th[colspan]{border-left:1px solid var(--light-theme);border-right:1px solid var(--light-theme);}</style>
 </head>
