--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 	<title>5-X 2023 Web Page</title>
 	<link href="styles/login.css" rel="stylesheet" type="text/css" />
 	<!--<script src="https://replit.com/public/js/repl-auth-v2.js"></script>-->
-	<link id="iconlink" rel="icon" type="image/png" href="/logos/5-X 2023.png">
+	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
 </head>
 <body>
