--- a/maintenance-mode.html
+++ b/maintenance-mode.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Under maintainence mode</title>
 	<link href="/styles/_main.css" rel="stylesheet" type="text/css" />
-	<link rel="icon" type="image/png" href="/logos/5-X%202023.png">
+	<link rel="icon" type="image/png" href="/logos/logo.png">
 </head>
 
 <body>
