--- a/homework.html
+++ b/homework.html
@@ -7,7 +7,7 @@
 	<!--<script src="maintainence.js"></script>-->
 	<title>Homework - 5-X 2023</title>
 	<link href="styles/hw.css" rel="stylesheet" type="text/css" />
-	<link id="iconlink" rel="icon" type="image/png" href="/logos/5-X 2023.png">
+	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
 	<!--<script src="iframed.js"></script>-->
 </head>
