--- a/resources/amec.html
+++ b/resources/amec.html
@@ -7,7 +7,7 @@
 	<!--<script src="maintainence.js"></script>-->
 	<title>AMEC</title>
 	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
-	<link id="iconlink" rel="icon" type="image/png" href="/logos/5-X 2023.png">
+	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<!--<script src="iframed.js"></script>-->
 </head>
 
