--- a/resources/revision/math/polygon.html
+++ b/resources/revision/math/polygon.html
@@ -7,7 +7,7 @@
 	<!--<script src="maintainence.js"></script>-->
 	<title>MATH REVISION POLYGONS</title>
 	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
-	<link rel="icon" type="image/png" href="/logos/5-X%202023.png">
+	<link rel="icon" type="image/png" href="/logos/logo.png">
 	<!--<script src="iframed.js"></script>-->
 </head>
 
