Change login page title

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="/maintainence.js"></script>-->
-	<title>5-X 2023 Web Page</title>
+	<title>TNSWEB</title>
 	<link href="styles/login.css" rel="stylesheet" type="text/css" />
 	<!--<script src="https://replit.com/public/js/repl-auth-v2.js"></script>-->
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
