--- a/homework.html
+++ b/homework.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="maintainence.js"></script>-->
-	<title>Homework - 5-X 2023</title>
+	<title>HOMEWORK</title>
 	<link href="styles/hw.css" rel="stylesheet" type="text/css" />
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
@@ -14,10 +14,11 @@
 
 <body style="display: none;">
 	<div class="logo-pngx">
-		<!--<img src="/logos/5-X%202023.png"/>-->
-		<h1><a id="backtohomepage" href="/">5-3 2023</a></h1>
+		<h1>Homework</h1>
+		<h4><a id="backtohomepage" href="/">Back to Home</a></h4>
 	</div>
 	<h3 class="textmid">Homework</h3>
+	<p><i>Dynamic homework currently unavailible</i></p>
 	<table id="hwtable">
 		<thead>
 			<tr>
@@ -31,7 +32,6 @@
 	</table>
 	<footer>This homework is specific to your mixed form class and pull-out class. e.g. CHINESE homework for 5J does not
 		apply to 5I.</footer>
-	<iframe hidden="true" src="https://5-x-2023-homework-colab-resource-5l5-4.gohjy.repl.co/"></iframe>
 	<script src="script.js"></script>
 	<script src="hw.js"></script>
 	<script src="newLoginCheck.js">
