--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>5-X 2023</title>
+	<title>TNS WEB</title>
 	<link href="styles/home.css" rel="stylesheet" type="text/css" />
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
@@ -36,8 +36,8 @@
 	-->
 	<div id="announcements-container">
 		<div>
-			<header>Closure of 4-1 2022 and 5-X 2023 Websites</header>
-			<section>Due to <a href="https://blog.replit.com/hosting-changes">changes in Replit's hosting system</a>, the 4-1 2022 and 5-X 2023 websites will no longer be availible after <strong>31 Dec 2023</strong>. Thank you.</section>
+			<header>Welcome to TNS WEB!</header>
+			<section>Replacing 4-1 2022 and 5-X 2023, this website is hosted on GitHub instead of Replit.</section>
 		</div>
 	</div>
 	<div id="resources">
@@ -49,10 +49,12 @@
 				<br/>
 				<a href="resources/revision/math/polygon.html">Math Revision - Polygons</a>
 			</details>
+			<!--
 			<details open>
 				<summary>Science</summary>
 				<a href="https://is.gd/shortcircuitnotes">Notes - Short Circuits</a>
 			</details>
+			
 			<details open>
 				<summary>AMEC</summary>
 				<a href="resources/amec.html">P5 AMEC 2023</a>
@@ -60,6 +62,7 @@
 				<em>Note: the above link will only work if you are in AMEC.</em>
 			</details>
 			<p><a href="/tnst">TNS Times</a></p>
+			-->
 		</details>
 	</div>
 	<div id="tools-container">
@@ -90,9 +93,6 @@
 		<button id="toggletheme">
 			Light theme
 		</button>
-	</p>
-	<p>
-		Website Version 1.4.4.0
 	</p>
 	<script src="home.js"></script>
 	<script src="theme.js"></script>
