--- a/login.html
+++ b/login.html
@@ -22,7 +22,8 @@
 					<input type="text" id="username"/><br/>
 					Password<br/>
 					<input type="password" id="password"/><br/>
-					<button id="login-btn">LOGIN</button>
+					<br/>
+					<button id="login-btn">Login</button>
 				</p>
 				<p id="status" style="display: none;"></p>
 			</div>
