Update digicard/index.html NTSAD

--- a/resources/non-teaching-staff-appreciation-day/digicard/index.html
+++ b/resources/non-teaching-staff-appreciation-day/digicard/index.html
@@ -5,19 +5,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="maintainence.js"></script>-->
-	<title>5-3 2023 - Non-Teaching Staff Appreciation Day: Dear Aunty Catherine</title>
+	<title>6-3 2024 NTSAD Digicard</title>
 	<link href="/styles/ntsad.css" rel="stylesheet" type="text/css" />
-	<link rel="icon" type="image/png" href="/logos/5-X%202023.png">
+	<link rel="icon" type="image/png" href="/logos/logo.png">
 	<!--<script src="iframed.js"></script>-->
 </head>
 
 <body style="display: none;">
 	<h1 id="main-header">2023 Non-Teaching Staff Appreciation Day</h1>
-	<h2>Dear Aunty Catherine...</h2>
+	<h2>Dear Mr. Darren...</h2>
 	<section id="sticky-holder"></section>
 	<script src="/newLoginCheck.js"></script>
 	<script src="main.js"></script>
-	<!--Theme script commented out below as the theme for this page is different from main pages-->
-	<!--<script src="/theme.js"></script>-->
 </body>
 </html>
