NTSAD fix display:none in body bug
Left over from 5-X 2023 - 5-3 2023 Digicard

--- a/resources/non-teaching-staff-appreciation-day/digicard/index.html
+++ b/resources/non-teaching-staff-appreciation-day/digicard/index.html
@@ -11,7 +11,7 @@
 	<!--<script src="iframed.js"></script>-->
 </head>
 
-<body style="display: none;">
+<body>
 	<h1 id="main-header">2023 Non-Teaching Staff Appreciation Day</h1>
 	<h2>Dear Mr. Darren...</h2>
 	<section id="sticky-holder"></section>
