Update digicard form

--- a/resources/non-teaching-staff-appreciation-day/digicard/form.html
+++ b/resources/non-teaching-staff-appreciation-day/digicard/form.html
@@ -1,1 +1,1 @@
-<script src="/newLoginCheck.js"></script><script>location.replace("https://docs.google.com/forms/d/e/1FAIpQLSdh2qdZubZlhyridKhXTEq9Mbkeo_yOSX3n-c_1LjgBXcwgWQ/viewform?usp=sf_link");</script>
+<script>location.replace("https://docs.google.com/forms/d/e/1FAIpQLSf8y0cI_QgJEBh4mF_U4K_b2WBTSslaLCLZqY8QwxoAktdmLw/viewform?usp=sf_link");</script>
