Update and rename maintenance-mode.html to maintenance/index.html

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Under maintainence mode</title>
-	<link href="/styles/_main.css" rel="stylesheet" type="text/css" />
+	<title>Under maintainence</title>
+	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="/logos/logo.png">
 </head>
 
