--- a/homework/index.html
+++ b/homework/index.html
@@ -4,12 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<!--<script src="maintainence.js"></script>-->
-	<title>HOMEWORK</title>
-	<link href="styles/hw.css" rel="stylesheet" type="text/css" />
+	<script src="/not-available/script.js"></script>
+	<title>Homework</title>
+	<link href="/styles/hw.css" rel="stylesheet" type="text/css" />
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
-	<script src="maintanence.js"></script>
-	<!--<script src="iframed.js"></script>-->
 </head>
 
 <body style="display: none;">
@@ -23,19 +21,18 @@
 			<tr>
 				<th>Date</th>
 				<th>Subject</th>
-				<th>Work</th>
+				<th>Homework</th>
 				<th>Due Date</th>
 			</tr>
 		</thead>
 		<tbody id="tbody"></tbody>
 	</table>
-	<footer>This homework is specific to your mixed form class and pull-out class. e.g. CHINESE homework for 5J does not
-		apply to 5I.</footer>
-	<script src="script.js"></script>
-	<script src="hw.js"></script>
-	<script src="newLoginCheck.js">
+	<footer>This homework is specific to your mixed form class and pull-out class. e.g. CHINESE homework for 6J does not
+		apply to 6I.</footer>
+	<script src="./hw.js"></script>
+	<script src="/login/loginCheck.js">
 	</script>
-	<script src="theme.js"></script>
+	<script src="/theme.js"></script>
 </body>
 
 </html>
