Update and rename login.html to login/index.html

--- a/login/index.html
+++ b/login/index.html
@@ -3,12 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<!--<script src="/maintainence.js"></script>-->
-	<title>TNSWEB</title>
-	<link href="styles/login.css" rel="stylesheet" type="text/css" />
-	<!--<script src="https://replit.com/public/js/repl-auth-v2.js"></script>-->
+	<script src="/not-available/script.js"></script>
+	<title>TNS WEB</title>
+	<link href="/styles/login.css" rel="stylesheet" type="text/css" />
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
-	<script src="maintanence.js"></script>
 </head>
 <body>
 		<div class="site-header">
@@ -28,6 +26,6 @@
 				<p id="status" style="display: none;"></p>
 			</div>
 		</div>
-		<script src="loginScriptNew.js"></script>
+		<script src="./loginScript.js"></script>
 </body>
 </html>
