add digicard footer

--- a/resources/non-teaching-staff-appreciation-day/digicard/index.html
+++ b/resources/non-teaching-staff-appreciation-day/digicard/index.html
@@ -15,6 +15,7 @@
 	<h1 id="main-header">2024 Non-Teaching Staff Appreciation Day</h1>
 	<h2>Dear Mr. Darren...</h2>
 	<section id="sticky-holder"></section>
+	<footer><p><em>From 6-3 2024</em></p></footer>
 	<script src="main.js"></script>
 </body>
 </html>
