Update login.html css

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<!--<script src="/maintainence.js"></script>-->
 	<title>TNSWEB</title>
-	<link href="styles/login.css" rel="stylesheet" type="text/css" />
+	<link href="/styles/main.css" rel="stylesheet" type="text/css" />
 	<!--<script src="https://replit.com/public/js/repl-auth-v2.js"></script>-->
 	<link id="iconlink" rel="icon" type="image/png" href="/logos/logo.png">
 	<script src="maintanence.js"></script>
