--- a/assets/error/not-logged-in.html
+++ b/assets/error/not-logged-in.html
@@ -18,7 +18,7 @@
 		if (userObj !== null) {
 			location.replace("/");
 		}
-		let sp = new URL(document.location).searchParams;
+		let sp = new URL(document.location.href).searchParams;
 		document.querySelector("#linkthing").setAttribute("href", new URL("/login.html?to=" + sp.get("to")).href);
 	</script>
 </body>
