--- a/assets/error/not-logged-in.html
+++ b/assets/error/not-logged-in.html
@@ -19,7 +19,7 @@
 			location.replace("/");
 		}
 		let sp = new URL(document.location.href).searchParams;
-		document.querySelector("#linkthing").setAttribute("href", new URL("/login.html?to=" + sp.get("to")).href);
+		document.querySelector("#linkthing").setAttribute("href", "/login.html?to=" + sp.get("to"));
 	</script>
 </body>
 </html>
