--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style>:is(th,td):not([colspan]){width:calc(100 / 7 * 1%);}th[colspan]{border-left:1px solid var(--light-theme);border-right:1px solid var(--light-theme);}</style>
 </head>
 <body style="display: none;">
-	<h1 id="page-header">5-X 2023</h1>
+	<h1 id="page-header">TNS WEB</h1>
 	<h2 id="salutation">Welcome, <span id="welcome"></span>.</h2>
 	
 	<div class="widget-box noselect">
