--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<img src="https://mailmeteor.com/logos/assets/PNG/Google_Drive_Logo_512px.png" alt="Drive"/>
 		</div>
 		<div class="tool" data-link="https://chat.google.com" data-name="Chat">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Google_Chat_icon_%282020%29.svg/1964px-Google_Chat_icon_%282020%29.svg.png" alt="Chat"/>
+			<img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Google_Chat_icon_%282023%29.svg" alt="Chat"/>
 		</div>
 		<div class="tool" data-link="https://classroom.google.com" data-name="Classroom">
 			<img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Google_Classroom_Logo.png" alt="Classroom"/>
@@ -84,7 +84,7 @@
 		<div class="tool" data-link="https://www.ezhishi.net/EtutorStudent/index.aspx" data-name="eZhishi">
 			<img src="https://play-lh.googleusercontent.com/KpC4WRnKkY3w_vXjE7-IGFv-RP20rSuCluOx9iybg0OzBNoen4JYQ_fBpoHe-EBUuNY" alt="eZhishi"/>
 		</div>
-		<div class="tool" data-link="https://www.myskillsfuture.gov.sg/content/student/en/primary/overview.html" data-name="MySkillsFuture">
+		<div class="tool" data-link="https://www.myskillsfuture.gov.sg/content/student/en/primary.html" data-name="MySkillsFuture">
 			<img src="https://www.myskillsfuture.gov.sg/favicon.ico" alt="MySkillsFuture"/>
 		</div>
 	</div>
